# gnss_iot

./: .gitignore  CMakeLists.txt  README.md  iot_gps.c  server.c  state_machine.c  tcp_iot.c  tcp_iot.h
include/: state_machine.h
src/: iot_gps.c  state_machine.c  tcp_iot.c
